--- a/index.html
+++ b/index.html
@@ -1,12 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="styles.css">
+        <title>HTML/CSS</title>
+    </head>
+    <body>
+        <div class="container">
+            <header>
+                <nav>
+                    <ul>
+                        <li><img src="./images/gift-cards.png" height="15px" width="15px" alt="gift-cards">Gift Cards</li>
+                        <li><img src="./images/registry-lists.png" height="15px" width="15px" alt="registry-lists">Registry & Lists</li>
+                        <li><img src="./images/weekly-ads.png" height="15px" width="15px" alt="weekly-ads">Weekly Ads</li>
+                        <li><img src="./images/store-finder.png" height="15px" width="15px" alt="store-finder">Store Finder</li>
+                        <li><img src="./images/track-orders.png" height="15px" width="15px" alt="track-orders">Track Orders</li>
+                        <li><img src="./images/credit-card.png" height="15px" width="15px" alt="credit-card">Credit Card</li>
+                        <li><img src="./images/help.png" height="15px" width="15px" alt="help">Help</li>
+                        <li><img src="./images/grocery-pickup.png" height="15px" width="15px" alt="grocery-pickup">Grocery Pickup</li>
+                    </ul>
+                </nav>
+                <div class="logo"></div>
+                <div class="searchbar">
+                    <form>
+                        <div class="all"><p>All</p></div>
+                        <input type="text" id="search" name="search" placeholder="Search">
+                        <input type="submit" value="">
+                        <div class="searc-icon">
+                            <img src="./images/search-icon.png" height="35px" width="35px" alt="cart">
+                        </div>      
+                    </form>
+                </div>    
+                <div class="myAccount">
+                    <p>Hello, Sign in</p>
+                    <h3>My Account</h3>
+                    <div class="pipe"></div>
+                    <img src="./images/cart.jpg" height="35px" width="35px" alt="cart">
+                </div> 
+            </header>
+            <div class="banner">
+                <nav>
+
+                </nav>
+                <div class="carousel">
+
+                </div>
+            </div>
+            <main>
+
+            </main>
+        </div>
+    </body>
 </html>
